--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,11 @@
   </head>
   <body>
 
-    <div id="root"></div>
+    <div id="root" class="jumbotron">
+      <h2 id="counter">0</h2>
+      <button id="dec" class="btn btn-primary btn-lg">DEC</button>
+      <button id="inc" class="btn btn-primary btn-lg">INC</button>
+    </div>
 
   </body>
 </html>
